Corrected according to style guide, removed extra whitespace and assignment arrows. ggvis and shiny were kept as they are called in zzz. Added packages to description in alphabetical order. Put back in official readme.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Authors@R: c(
     person("Zachary", "Jones", email = "zmj@zmjones.com", role = "aut"),
     person("Giuseppe", "Casalicchio", email = "giuseppe.casalicchio@stat.uni-muenchen.de", role = "aut"),
     person("Mason", "Gallo", email = "masonagallo@gmail.com", role = "aut"),
+    person("Bronder", "Stephen", email = "sbronder@stevebronder.com", role = "aut"),
     person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "ctb"),
     person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role = "ctb"),
     person("Leonard","Judt", email = "leonard.judt@tu-dortmund.de", role = "ctb"),
@@ -39,24 +40,25 @@ Depends:
 Imports:
     BBmisc (>= 1.10),
     backports,
-    ggplot2,
-    stats,
-    stringi,
     checkmate (>= 1.8.1),
     data.table,
+    ggplot2,
+    ggvis,
+    lubridate,
     methods,
     parallelMap (>= 1.3),
+    shiny,
+    stats,
+    stringi,
     survival,
     utils,
     xts,
-    lubridate,
-    zoo,
-    ggvis,
-    shiny
+    zoo
 Suggests:
     ada,
     adabag,
     bartMachine,
+    BigVAR,
     brnn,
     bst,
     C50,
@@ -84,6 +86,7 @@ Suggests:
     flare,
     fields,
     FNN,
+    forecast,
     fpc,
     frbs,
     FSelector,
@@ -100,6 +103,7 @@ Suggests:
     klaR,
     knitr,
     kohonen,
+    LambertW,
     laGP,
     LiblineaR,
     lqa,
@@ -138,6 +142,7 @@ Suggests:
     rrlda,
     rsm,
     RSNNS,
+    rugarch,
     RWeka,
     sda,
     smoof,
@@ -151,10 +156,6 @@ Suggests:
     TH.data,
     xgboost (>= 0.4-4),
     XML,
-    forecast,
-    rugarch,
-    LambertW,
-    BigVAR
 LazyData: yes
 ByteCompile: yes
 Version: 2.10
