Added print statement for multivariate forecast tasks.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -528,6 +528,7 @@ S3method(print,Learner)
 S3method(print,LearningCurveData)
 S3method(print,ListLearners)
 S3method(print,Measure)
+S3method(print,MultiForecastRegrTask)
 S3method(print,MultilabelTask)
 S3method(print,OptModel)
 S3method(print,PartialDependenceData)
