Fixed some bugs in createLagDiffFeatures. Added arbitrary forecast function. Still need to write tests for forecast

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,21 @@
 
 S3method(as.data.frame,BenchmarkResult)
 S3method(as.data.frame,Prediction)
+S3method(as.data.frame,xts)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
 S3method(capLargeValues,Task)
 S3method(capLargeValues,data.frame)
 S3method(createDummyFeatures,Task)
 S3method(createDummyFeatures,data.frame)
-S3method(createLagDiffFeatures,ForecastRegrTask)
+S3method(createLagDiffFeatures,Task)
 S3method(createLagDiffFeatures,xts)
 S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
 S3method(estimateRelativeOverfitting,ResampleDesc)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
+S3method(forecast,WrappedModel)
 S3method(generateCalibrationData,BenchmarkResult)
 S3method(generateCalibrationData,Prediction)
 S3method(generateCalibrationData,ResampleResult)
@@ -820,6 +822,7 @@ export(filterFeatures)
 export(fixedcv)
 export(fn)
 export(fnr)
+export(forecast)
 export(fp)
 export(fpr)
 export(friedmanPostHocTestBMR)
