--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1210,6 +1210,7 @@ importFrom(xts,rbind.xts)
 importFrom(xts,reclass)
 importFrom(xts,try.xts)
 importFrom(xts,xts)
+importFrom(zoo,cbind.zoo)
 importFrom(zoo,coredata)
 importFrom(zoo,index)
 useDynLib(mlr,c_smote)
